basic falling physics, needs testing

--- a/PhysicsTest.cbp
+++ b/PhysicsTest.cbp
@@ -50,9 +50,10 @@
 			<Add directory="/home/heslo-odin/Documents/SFML_Attempt_2/SFML-3.0.0/lib" />
 		</Linker>
 		<Unit filename="fonts/PLANK___.TTF" />
+		<Unit filename="headers/ConstantsAndVariables.h" />
+		<Unit filename="headers/Functions.h" />
+		<Unit filename="headers/Objects.h" />
 		<Unit filename="headers/Random.h" />
-		<Unit filename="headers/constants.h" />
-		<Unit filename="headers/objects.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="sprites/apple.png" />
 		<Unit filename="sprites/flare_armor.png" />
